added widget and also make the on and off button functional

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <div class="iphone" id="iphone">
+        <div onclick="sleep()" id="sleeps" class="sleep"></div>
         <div class="nav">
             <div class="nava"></div>
             <div class="navb"></div>
@@ -49,7 +50,7 @@
                     </div>
                 </div>
             </div>
-            <div class="widget"></div>
+            <div class="widget_on_lockscreen"></div>
             <div class="footer">
                 <div class="footera">
                     <div class="da"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="110" viewBox="0 0 20 20">
@@ -193,9 +194,27 @@
                             <div class="second">
                                 <div class="sea">
                                     <div class="left">
-                                        <div class="widgeta">time</div>
-                                        <div class="widgetb">pic</div>
-                                        <div class="widgetc"></div>
+                                        <div class="widgeta">
+                                            <h2 id="h2tm"></h2>
+                                            <p id="pday"></p>
+                                            <span id="span_m_y"></span>
+                                        </div>
+                                        <div class="widgetb">
+                                            <img src="moi pic.PNG" alt="">
+                                            <img src="my profile.jfif" alt="">
+                                            <img src="moi sis.jpeg" alt="">
+                                            <img src="yongersis (1).PNG" alt="">
+                                            <div bb style="color: rgb(29, 29, 29); position: absolute; top: 10px;left: 30px; background-color: rgb(255, 255, 255) ;">scroll -></div>
+                                        </div>
+                                        <div class="widgetc">
+                                            <div class="phone_charging_circle">
+                                                <main a>
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 512 512"><rect width="256" height="480" x="128" y="16" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" rx="48" ry="48"/><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M176 16h24a8 8 0 0 1 8 8h0a16 16 0 0 0 16 16h64a16 16 0 0 0 16-16h0a8 8 0 0 1 8-8h24"/></svg>
+                                                    <aside a><svg  xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="m9.154 20.885l1-6.885h-4.25l7.48-10.788h.462L12.866 11h5l-8.25 9.885z"/></svg></aside>
+                                                </main>
+                                            </div>
+                                            <h2>99%</h2>
+                                        </div>
                                     </div>
                                     <div class="right">
                                         
