major apps are clickable

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="nava"></div>
             <div class="navb"></div>
         </div>
-        <!-- <div class="lockscreen_sect" id="lockscreen_sect">
+        <div class="lockscreen_sect" id="lockscreen_sect">
             <div class="topper">
                 <div class="topa">
                     <div class="service">
@@ -138,7 +138,7 @@
 
                 </div>
             </div>
-        </div> -->
+        </div>
         <div class="home_sect" id="home_sect">
             <div id="pa_caro" class="pa_caro">
                 <div id="carouselExampleIndicators" class="carousel slide">
